Added error message when submitting invalid word

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 				<input type="text" id="input_word" />
 			</p>
 			<button type="button" id="submit_word">Validez</button>
+			<p id="error_message">
+					Mot invalide<br/>
+					Les chiffres et caractères spéciaux ne sont pas autorisés<br/>
+					Veuillez recommencer
+			</p>
 		</div>
 		<div id="box_guess_word" class="box">
 			<p>
