--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" 
 		      rel="stylesheet">
 		<link rel="stylesheet" href="styles.css" />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
 	<body>
 		<h1>Jeu du pendu</h1>
